--- a/app/src/main/res/layout/custom_nav_drawer_row.xml
+++ b/app/src/main/res/layout/custom_nav_drawer_row.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
 
     <TextView
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
         android:id="@+id/textView"
-        android:layout_gravity="right"
-        android:layout_weight="0.23" />
+        android:layout_gravity="center"/>
 
     <ImageView
-        android:layout_width="115dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:layout_weight="0.23" />
+        android:id="@+id/imageView"/>
 </LinearLayout>
