--- a/app/src/main/res/layout/custom_nav_drawer_row.xml
+++ b/app/src/main/res/layout/custom_nav_drawer_row.xml
@@ -4,14 +4,15 @@
     android:layout_height="match_parent"
     android:weightSum="1">
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:id="@+id/imageView"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/textView"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:gravity="center"/>
 
 </LinearLayout>
