--- a/app/src/main/res/layout/custom_nav_drawer_row.xml
+++ b/app/src/main/res/layout/custom_nav_drawer_row.xml
@@ -4,6 +4,9 @@
     android:layout_height="match_parent"
     android:weightSum="1">
     <ImageView
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:id="@+id/imageView"/>
