--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="roots_green">#ff8bbe4a</color>
+    <color name="counselor_bar">#99999999</color>
 </resources>
