--- a/app/src/main/res/layout/counselor_bar_item.xml
+++ b/app/src/main/res/layout/counselor_bar_item.xml
@@ -11,12 +11,19 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:id="@+id/counselorbarimage"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:gravity="center"
         android:layout_gravity="center"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:id="@+id/counselorbartext"
         android:textColor="#ff000000"/>
 
