--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,12 +39,26 @@
         android:paddingBottom="5dp"
         android:paddingTop="5dp"
         android:textSize="20sp"
+        android:background="@color/roots_green"
+        android:shadowColor="#ffaaaaaa"
 
         android:layout_height="wrap_content"
         android:layout_below="@+id/loginedittext"
         android:text="Login"
         android:layout_marginTop="25dp"
         android:layout_centerHorizontal="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Counselor Login"
+        android:textColor="#ff0028ea"
+        android:id="@+id/counselorlogin"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
     <!--
         <ScrollView
             android:layout_width="match_parent"
