--- a/app/src/main/res/layout/activity_messages_view.xml
+++ b/app/src/main/res/layout/activity_messages_view.xml
@@ -7,6 +7,57 @@
     android:orientation="vertical">
 
 
+    <LinearLayout
+        android:id="@+id/counselorbiobar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+
+        android:orientation="horizontal"
+        android:background="@color/counselor_bar">
+
+        <ImageView android:id="@+id/counselorbioimage"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_margin="10dp"
+            android:scaleType="centerCrop"
+            android:background="@drawable/atlas_shape_circle_gray"
+            />
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingRight="10dp"
+            android:paddingLeft="20dp"
+            android:id="@+id/bioinformationview"
+            >
+
+
+
+            <TextView
+                android:id="@+id/bioinformationtitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:textSize="@dimen/atlas_text_size_general"
+                android:text="Tomaz Stolfa"
+                />
+
+
+
+
+            <TextView
+                android:id="@+id/bioinformation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/bioinformationtitle"
+                android:text="You did it! When are we going to see the..."
+                android:textSize="@dimen/atlas_text_size_smaller"
+                />
+
+        </RelativeLayout>
+    </LinearLayout>
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -33,5 +84,6 @@
         android:id="@+id/textinput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
 
 </LinearLayout>
