Actual counselor bio's are displayed in ViewMessagesActivity, and there is a currently useless Call button under the counselor pic.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Counselor Login"
-        android:textColor="#ff0028ea"
+        android:textColor="@color/tappable_blue"
         android:id="@+id/counselorlogin"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
