--- a/app/src/main/res/layout/activity_messages_view.xml
+++ b/app/src/main/res/layout/activity_messages_view.xml
@@ -1,112 +1,163 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:atlas="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/view_messages_drawer_layout"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_width="match_parent">
 
 
-    <LinearLayout
-        android:id="@+id/counselorbiobar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
 
-        android:orientation="horizontal"
-        android:background="@color/counselor_bar">
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content">
-            <ImageView android:id="@+id/counselorbioimage"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_margin="10dp"
-                android:scaleType="centerCrop"
-                android:background="@drawable/atlas_shape_circle_gray"
-                />
-            <TextView
-                android:id="@+id/callbutton"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_gravity="center"
-                android:text="Call"
-                android:textSize="@dimen/atlas_text_size_general"
-                android:textColor="@color/tappable_blue"/>
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:atlas="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+                <TextView
+                    android:id="@+id/counselor_unavailible_warning"
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="This counselor is offline. Don't expect an immediate response!"
+                    android:background="#ffffb0b2"
+                    android:textColor="#ffff0709"
+                    android:textSize="@dimen/atlas_text_size_general"
+                    android:gravity="center"
+                    android:padding="5dp" />
+
+                <com.layer.atlas.AtlasMessagesList
+                    android:id="@+id/messageslist"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+                <com.layer.atlas.AtlasTypingIndicator
+                    android:id="@+id/typingindicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <com.layer.atlas.AtlasParticipantPicker
+                    android:id="@+id/participantpicker"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+            </FrameLayout>
+
+            <com.layer.atlas.AtlasMessageComposer
+                android:id="@+id/textinput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+
         </LinearLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingRight="10dp"
-            android:paddingLeft="20dp"
-            android:id="@+id/bioinformationview"
-            >
-
-
-
-            <TextView
-                android:id="@+id/bioinformationtitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:singleLine="true"
-                android:textSize="@dimen/atlas_text_size_general"
-                android:text="Tomaz Stolfa"
-                />
-
-
-
-
-            <TextView
-                android:id="@+id/bioinformation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/bioinformationtitle"
-                android:text="You did it! When are we going to see the..."
-                android:textSize="@dimen/atlas_text_size_smaller"
-                />
-
-        </RelativeLayout>
-    </LinearLayout>
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-        <TextView
-            android:id="@+id/counselor_unavailible_warning"
-            android:visibility="gone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="This counselor is offline. Don't expect an immediate response!"
-            android:background="#ffffb0b2"
-            android:textColor="#ffff0709"
-            android:textSize="@dimen/atlas_text_size_general"
-            android:gravity="center"
-            android:padding="5dp"/>
-
-        <com.layer.atlas.AtlasMessagesList
-            android:id="@+id/messageslist"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-        <com.layer.atlas.AtlasTypingIndicator
-            android:id="@+id/typingindicator"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <com.layer.atlas.AtlasParticipantPicker
-            android:id="@+id/participantpicker"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
     </FrameLayout>
 
-    <com.layer.atlas.AtlasMessageComposer
-        android:id="@+id/textinput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+
+    <!-- nav drawer containing all counselor info-->
+    <FrameLayout
+        android:id="@+id/counselor_bio_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="end">
+        <LinearLayout
+            android:id="@+id/counselorbiobar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="10dp"
+
+            android:orientation="vertical"
+            android:background="@color/counselor_bar">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content">
+
+                <ImageView
+                    android:id="@+id/counselorbioimage"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_margin="10dp"
+                    android:scaleType="centerCrop"
+                    android:background="@drawable/atlas_shape_circle_gray" />
+
+                <TextView
+                    android:id="@+id/bioinformationtitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:layout_gravity="center"
+                    android:textSize="@dimen/atlas_text_size_title"
+                    android:text="Tomaz Stolfa"
+                    android:layout_margin="10dp"/>
+
+                <TextView
+                    android:id="@+id/callbutton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:text="Call"
+                    android:textSize="@dimen/atlas_text_size_tiny"
+                    android:textColor="@color/tappable_blue" />
+            </LinearLayout>
+
+            <ScrollView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:id="@+id/scrollView">
+
+                <TextView
+                    android:id="@+id/bioinformation"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="You did it! When are we going to see the..."
+                    android:textSize="@dimen/atlas_text_size_smaller" />
+            </ScrollView>
+
+            <!--<RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingRight="10dp"
+                android:paddingLeft="20dp"
+                android:id="@+id/bioinformationview">
 
 
-</LinearLayout>
+                <TextView
+                    android:id="@+id/bioinformationtitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:textSize="@dimen/atlas_text_size_general"
+                    android:text="Tomaz Stolfa" />
+
+
+                <ScrollView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:scrollbars="none"
+                    android:layout_below="@+id/bioinformationtitle"
+                    android:id="@+id/scrollView">
+
+                    <TextView
+                        android:id="@+id/bioinformation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="You did it! When are we going to see the..."
+                        android:textSize="@dimen/atlas_text_size_smaller" />
+                </ScrollView>
+            </RelativeLayout>-->
+        </LinearLayout>
+    </FrameLayout>
+
+</android.support.v4.widget.DrawerLayout>
+
