--- a/app/src/main/res/layout/loading_screen.xml
+++ b/app/src/main/res/layout/loading_screen.xml
@@ -9,11 +9,16 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:id="@+id/loadinglogo"
-        android:layout_gravity="center"
         android:src="@drawable/commonrootslogo"
-        android:layout_marginTop="2dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:visibility="gone" />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="@drawable/commonrootslogo"
+        android:layout_centerHorizontal="true"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
