--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="roots_green">#ff87d367</color>
     <color name="counselor_bar">#ddeeeeee</color>
     <color name="tappable_blue">#ff0028ea</color>
+    <color name="friendly_warning_red">#ffffb0b2</color>
 </resources>
