--- a/app/src/main/res/layout/loading_screen.xml
+++ b/app/src/main/res/layout/loading_screen.xml
@@ -2,11 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="@color/roots_green"
     android:windowSoftInputMode="adjustNothing"
     android:id="@+id/loading_screen_running">
 
     <ImageView
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:src="@drawable/roots_in_circ"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
+
+    <!--<ImageView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:id="@+id/loadinglogo"
@@ -14,12 +21,12 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:visibility="gone" />
-    <ImageView
+        android:visibility="gone" />-->
+    <!--<ImageView
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:background="@drawable/commonrootslogo"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"/>-->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -44,6 +51,7 @@
             android:textStyle="bold"/>
 
     </RelativeLayout>
+
 
 
 
