--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="roots_green">#ff87d367</color>
+    <color name="roots_green">#ff26df45</color>
+    <color name="roots_green_darker">#ff209632</color>
     <color name="counselor_bar">#ddeeeeee</color>
     <color name="text_counselor_bar">#dd9b9ca0</color>
     <color name="tappable_blue">#ff0028ea</color>
