--- a/app/src/main/res/layout/loading_screen.xml
+++ b/app/src/main/res/layout/loading_screen.xml
@@ -7,8 +7,8 @@
     android:id="@+id/loading_screen_running">
 
     <ImageView
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:src="@drawable/roots_in_circ"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"/>
@@ -27,7 +27,7 @@
         android:layout_height="200dp"
         android:background="@drawable/commonrootslogo"
         android:layout_centerHorizontal="true"/>-->
-    <RelativeLayout
+    <!--<RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -50,7 +50,7 @@
             android:textSize="12sp"
             android:textStyle="bold"/>
 
-    </RelativeLayout>
+    </RelativeLayout>-->
 
 
 
