--- a/app/src/main/res/layout/custom_nav_drawer_row.xml
+++ b/app/src/main/res/layout/custom_nav_drawer_row.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="50dp"
+    android:padding="5dp"
+    android:gravity="center_vertical"
     android:weightSum="1">
     <ImageView
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_width="40dp"
+        android:layout_width="wrap_content"
         android:layout_height="40dp"
+        android:gravity="center"
         android:id="@+id/imageView"/>
     <TextView
         android:layout_width="match_parent"
